--- a/src/lib/TdDpsLib/TdDpsLib.csproj
+++ b/src/lib/TdDpsLib/TdDpsLib.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <Reference Include="Td.Dps">
-      <HintPath>..\..\..\bin\Td.Dps.dll</HintPath>
+      <HintPath>..\..\..\bin\bin\Td.Dps.dll</HintPath>
     </Reference>
   </ItemGroup>
 
