--- a/bin/bin.menu/Picking.ini
+++ b/bin/bin.menu/Picking.ini
@@ -28,9 +28,9 @@ ROOT=C:\Projects\Takaki.TS
 ;	ROOT		メニュー実行ルート
 ;-----------------------------------------------
 [MENU]
-;FILE=bin\bin.menu\Menu\Server\index.html
+FILE=bin\bin.menu\Menu\Server\index.html
 ;FILE=bin\bin.menu\Menu\Large\index.html
-FILE=bin\bin.menu\Menu\Dist\index.html
+;FILE=bin\bin.menu\Menu\Dist\index.html
 ROOT=bin\bin
 WIDTH=0
 HEIGHT=0
