--- a/src/DistLargeGroup/DistLargeGroup.csproj
+++ b/src/DistLargeGroup/DistLargeGroup.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
+    <ProjectReference Include="..\lib\ReferenceLogLib\ReferenceLogLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
