--- a/src/lib/ReferenceLogLib/ReferenceLogLib.csproj
+++ b/src/lib/ReferenceLogLib/ReferenceLogLib.csproj
@@ -10,7 +10,12 @@
 		<PackageReference Include="MaterialDesignColors" Version="2.1.4" />
 		<PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
 		<PackageReference Include="MaterialDesignThemes.MahApps" Version="0.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\DbLib\DbLib.csproj" />
 	</ItemGroup>
 
 </Project>
