--- a/src/DistGroup/DistGroup.csproj
+++ b/src/DistGroup/DistGroup.csproj
@@ -24,6 +24,8 @@
   <ItemGroup>
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
+    <ProjectReference Include="..\lib\ReferenceLogLib\ReferenceLogLib.csproj" />
+    <ProjectReference Include="..\lib\TakakiLib\TakakiLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
