--- a/src/LargeDist/LargeDist.csproj
+++ b/src/LargeDist/LargeDist.csproj
@@ -13,8 +13,10 @@
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LargeDistLabelLib\LargeDistLabelLib.csproj" />
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
+    <ProjectReference Include="..\lib\SatoPrintLib\SatoPrintLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
   <ItemGroup>
