--- a/src/lib/ProcessorLib/ProcessorLib.csproj
+++ b/src/lib/ProcessorLib/ProcessorLib.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BackendLib\BackendLib.csproj" />
     <ProjectReference Include="..\LogLib\LogLib.csproj" />
   </ItemGroup>
