--- a/src/Service/StowageSvr/StowageSvr.csproj
+++ b/src/Service/StowageSvr/StowageSvr.csproj
@@ -18,6 +18,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\lib\DbLib\DbLib.csproj" />
 		<ProjectReference Include="..\..\lib\LabelLib\LabelLib.csproj" />
 		<ProjectReference Include="..\..\lib\LogLib\LogLib.csproj" />
