--- a/src/StowageListPrint/StowageListPrint.csproj
+++ b/src/StowageListPrint/StowageListPrint.csproj
@@ -25,6 +25,10 @@
     <ProjectReference Include="..\lib\CsvLib\CsvLib.csproj" />
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
+    <ProjectReference Include="..\lib\PrintLib\PrintLib.csproj" />
+    <ProjectReference Include="..\lib\PrintPreviewLib\PrintPreviewLib.csproj" />
+    <ProjectReference Include="..\lib\SearchBoxLib\SearchBoxLib.csproj" />
+    <ProjectReference Include="..\lib\SelDistGroupLib\SelDistGroupLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
