関連プロジェクト:TakakiLib内名称取得変更に伴う更新。using変更
・参照日をNameLoader内に

--- a/src/SeatMapping/SeatMapping.csproj
+++ b/src/SeatMapping/SeatMapping.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
     <ProjectReference Include="..\lib\ReferenceLogLib\ReferenceLogLib.csproj" />
+    <ProjectReference Include="..\lib\TakakiLib\TakakiLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
