--- a/src/Mapping/Mapping.csproj
+++ b/src/Mapping/Mapping.csproj
@@ -22,8 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\lib\CsvLib\CsvLib.csproj" />
     <ProjectReference Include="..\lib\DbLib\DbLib.csproj" />
+    <ProjectReference Include="..\lib\ExportBase\ExportBase.csproj" />
+    <ProjectReference Include="..\lib\ExportLib\ExportLib.csproj" />
     <ProjectReference Include="..\lib\LogLib\LogLib.csproj" />
+    <ProjectReference Include="..\lib\PrintLib\PrintLib.csproj" />
+    <ProjectReference Include="..\lib\PrintPreviewLib\PrintPreviewLib.csproj" />
     <ProjectReference Include="..\lib\TakakiLib\TakakiLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
