ハンディＰＧ更新環境設定

--- a/bin/bin.backend/picking.ini
+++ b/bin/bin.backend/picking.ini
@@ -17,9 +17,16 @@
 ;-----------------------------------------------
 [GLOBAL]
 ROOT=c:\projects\Takaki.TS
-TARGETBACKEND=192.168.10.145
+TARGETBACKEND=192.168.10.155
 ;PORT=5501
 CONNECT=Driver={SQL Server};UID=sa;PWD=sc;SERVER=(local)\MSSQL2022ex;DATABASE=Takaki_TS
+
+;-----------------------------------------------
+;【パス　セクション
+;	PATH_BIN		ハンディ Updatebt.zip保存場所
+;-----------------------------------------------
+[PATH_DIR]
+PATH_BIN=bin\bin.backend
 
 ;**
 ;**
@@ -45,4 +52,4 @@ FLUSH=1
 TRANSMITTO=
 USETCP=0
 [DBCTRL]
-DBPATH=c:\
+DBPATH=C:\Projects\Takaki.TS\db
