0007307:積付表発行　『CSV出力』で出力されたファイル内の見出しが全て英字で何の項目かわかりにくいので日本語で記載して下さい。 0007325:積付表発行　『CSV出力』で出力されるＣＳＶファイルの項目が画面に表示されている項目と同じにして下さい。
CSVLibでのCSV出力処理を変更

--- a/src/lib/CsvLib/CsvLib.csproj
+++ b/src/lib/CsvLib/CsvLib.csproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LogLib\LogLib.csproj" />
     <ProjectReference Include="..\ProcessorLib\ProcessorLib.csproj" />
+    <ProjectReference Include="..\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
 </Project>
