積付表発行:ID=7356 積付数変更画面に作業社員コードリスト追加。DB更新内容追加

--- a/src/StowageListPrint/StowageListPrint.csproj
+++ b/src/StowageListPrint/StowageListPrint.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\lib\PrintLib\PrintLib.csproj" />
     <ProjectReference Include="..\lib\PrintPreviewLib\PrintPreviewLib.csproj" />
     <ProjectReference Include="..\lib\SearchBoxLib\SearchBoxLib.csproj" />
+    <ProjectReference Include="..\lib\TakakiLib\TakakiLib.csproj" />
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
