--- a/src/LargeDist/LargeDist.csproj
+++ b/src/LargeDist/LargeDist.csproj
@@ -8,7 +8,11 @@
     <BaseOutputPath>..\..\bin\</BaseOutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <ApplicationIcon>DimensionUsageView.ico</ApplicationIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="DimensionUsageView.ico" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
