座席マッピング処理 ＤＰＳ外一覧画面追加

--- a/src/Mapping/Mapping.csproj
+++ b/src/Mapping/Mapping.csproj
@@ -38,4 +38,10 @@
     <ProjectReference Include="..\lib\WindowLib\WindowLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Update="Views\DpsOtherInfo.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
